remove cholwishart package that used for multivariate gamma function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,8 +35,7 @@ Imports:
     foreach,
     purrr,
     utils,
-    stats,
-    CholWishart
+    stats
 LinkingTo: Rcpp, RcppEigen
 VignetteBuilder: knitr
 Depends: 
