--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: bvhar
 Type: Package
-Title: Bayesian Vector HAR Model
+Title: Bayesian Vector Autoregressive Heterogeneous Modeling
 Version: 0.4.0
 Date: 2021-08-01
 Authors@R: 
@@ -12,7 +12,7 @@ Authors@R:
              family = "Baek",
              role = "ctb"))
 Description: A package aiming at researching Bayesian Vector heterogeneous autoregressive process.
-    You can model VAR, VHAR, Bayesian VAR (BVAR), and Bayesian VHAR (BVHAR).
+    `bvhar` can model VAR, VHAR, Bayesian VAR (BVAR), and Bayesian VHAR (BVHAR).
 License: MIT + file LICENSE
 URL: https://github.com/ygeunkim/bvhar
 BugReports: https://github.com/ygeunkim/bvhar/issues
