--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,8 +61,7 @@ S3method(print,bvharemp)
 S3method(print,bvharmn)
 S3method(print,bvharspec)
 S3method(print,predbvhar)
-S3method(print,summary.bvarmn)
-S3method(print,summary.bvharmn)
+S3method(print,summary.bvharmod)
 S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
 S3method(print,varlse)
@@ -78,8 +77,7 @@ S3method(stableroot,bvarmn)
 S3method(stableroot,bvharmn)
 S3method(stableroot,varlse)
 S3method(stableroot,vharlse)
-S3method(summary,bvarmn)
-S3method(summary,bvharmn)
+S3method(summary,bvharmod)
 S3method(summary,varlse)
 S3method(summary,vharlse)
 export("%>%")
@@ -133,7 +131,6 @@ export(knit_print.bvharemp)
 export(knit_print.bvharmn)
 export(knit_print.bvharspec)
 export(knit_print.predbvhar)
-export(knit_print.summary.bvarmn)
 export(knit_print.summary.bvharmn)
 export(knit_print.summary.varlse)
 export(knit_print.summary.vharlse)
