replace ic functions in choose var with cpp scripts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,9 +19,9 @@ S3method(HQ,logLik)
 S3method(HQ,varlse)
 S3method(HQ,vharlse)
 S3method(autolayer,predbvhar)
-S3method(autoplot,bvharmod)
+S3method(autoplot,normaliw)
 S3method(autoplot,predbvhar)
-S3method(autoplot,summary.bvharmod)
+S3method(autoplot,summary.normaliw)
 S3method(coef,bvarflat)
 S3method(coef,bvarmn)
 S3method(coef,bvharmn)
@@ -61,7 +61,7 @@ S3method(print,bvharemp)
 S3method(print,bvharmn)
 S3method(print,bvharspec)
 S3method(print,predbvhar)
-S3method(print,summary.bvharmod)
+S3method(print,summary.normaliw)
 S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
 S3method(print,varlse)
@@ -77,7 +77,7 @@ S3method(stableroot,bvarmn)
 S3method(stableroot,bvharmn)
 S3method(stableroot,varlse)
 S3method(stableroot,vharlse)
-S3method(summary,bvharmod)
+S3method(summary,normaliw)
 S3method(summary,varlse)
 S3method(summary,vharlse)
 export("%>%")
@@ -131,7 +131,7 @@ export(knit_print.bvharemp)
 export(knit_print.bvharmn)
 export(knit_print.bvharspec)
 export(knit_print.predbvhar)
-export(knit_print.summary.bvharmn)
+export(knit_print.summary.normaliw)
 export(knit_print.summary.varlse)
 export(knit_print.summary.vharlse)
 export(knit_print.varlse)
