compute loss for rolling window

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,10 +45,14 @@ S3method(logLik,bvarmn)
 S3method(logLik,bvharmn)
 S3method(logLik,varlse)
 S3method(logLik,vharlse)
+S3method(mae,bvharcv)
 S3method(mae,predbvhar)
+S3method(mape,bvharcv)
 S3method(mape,predbvhar)
+S3method(mase,bvharcv)
 S3method(mase,predbvhar)
 S3method(mrae,predbvhar)
+S3method(mse,bvharcv)
 S3method(mse,predbvhar)
 S3method(predict,bvarflat)
 S3method(predict,bvarmn)
@@ -57,6 +61,7 @@ S3method(predict,varlse)
 S3method(predict,vharlse)
 S3method(print,bvarflat)
 S3method(print,bvarmn)
+S3method(print,bvharcv)
 S3method(print,bvharemp)
 S3method(print,bvharmn)
 S3method(print,bvharspec)
@@ -101,6 +106,7 @@ export(compute_dic)
 export(compute_logml)
 export(compute_stablemat)
 export(divide_ts)
+export(forecast_roll)
 export(geom_eval)
 export(geom_predbvhar)
 export(is.bvarflat)
@@ -113,6 +119,7 @@ export(is.varlse)
 export(is.vharlse)
 export(knit_print.bvarflat)
 export(knit_print.bvarmn)
+export(knit_print.bvharcv)
 export(knit_print.bvharemp)
 export(knit_print.bvharmn)
 export(knit_print.bvharspec)
