compute loss for expanding window

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ export(compute_dic)
 export(compute_logml)
 export(compute_stablemat)
 export(divide_ts)
+export(forecast_expand)
 export(forecast_roll)
 export(geom_eval)
 export(geom_predbvhar)
