changing the way to draw loss plot by making geom function

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -97,12 +97,11 @@ reference:
   contents:
   - autoplot.normaliw
   - autoplot.summary.normaliw
-  - geom_predbvhar
   - autoplot.predbvhar
   - geom_eval
   - plot_loss
 
-- title: Simulation
+- title: Simulation and Random Generation
   desc: ~
   contents:
   - sim_var
