--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,7 +109,6 @@ export(divide_ts)
 export(forecast_expand)
 export(forecast_roll)
 export(geom_eval)
-export(geom_predbvhar)
 export(is.bvarflat)
 export(is.bvarmn)
 export(is.bvharmn)
@@ -155,6 +154,7 @@ export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
@@ -170,9 +170,9 @@ importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_hline)
-importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,labs)
