fix out of forecasting id output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ S3method(mape,bvharcv)
 S3method(mape,predbvhar)
 S3method(mase,bvharcv)
 S3method(mase,predbvhar)
+S3method(mrae,bvharcv)
 S3method(mrae,predbvhar)
 S3method(mse,bvharcv)
 S3method(mse,predbvhar)
@@ -111,6 +112,7 @@ export(forecast_roll)
 export(geom_eval)
 export(is.bvarflat)
 export(is.bvarmn)
+export(is.bvharcv)
 export(is.bvharmn)
 export(is.bvharspec)
 export(is.predbvhar)
