--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -26,7 +26,7 @@ jobs:
           extra-packages: covr
 
       - name: Test coverage
-        run: covr::codecov(token = CODECOV_TOKEN)
+        run: covr::codecov()
         env:
-          CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         shell: Rscript {0}
