change plot loss to gg loss with facet feature

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ export(divide_ts)
 export(forecast_expand)
 export(forecast_roll)
 export(geom_eval)
+export(gg_loss)
 export(is.bvarflat)
 export(is.bvarmn)
 export(is.bvharcv)
@@ -136,7 +137,6 @@ export(mape)
 export(mase)
 export(mrae)
 export(mse)
-export(plot_loss)
 export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
