--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,8 @@ S3method(print,bvharcv)
 S3method(print,bvharemp)
 S3method(print,bvharmn)
 S3method(print,bvharspec)
+S3method(print,bvharss_coef)
+S3method(print,bvharss_sig)
 S3method(print,predbvhar)
 S3method(print,summary.normaliw)
 S3method(print,summary.varlse)
@@ -116,6 +118,8 @@ export(is.bvarmn)
 export(is.bvharcv)
 export(is.bvharmn)
 export(is.bvharspec)
+export(is.bvharss_coef)
+export(is.bvharss_sig)
 export(is.predbvhar)
 export(is.stable)
 export(is.varlse)
@@ -126,6 +130,8 @@ export(knit_print.bvharcv)
 export(knit_print.bvharemp)
 export(knit_print.bvharmn)
 export(knit_print.bvharspec)
+export(knit_print.bvharss_coef)
+export(knit_print.bvharss_sig)
 export(knit_print.predbvhar)
 export(knit_print.summary.normaliw)
 export(knit_print.summary.varlse)
@@ -140,6 +146,9 @@ export(mse)
 export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
+export(set_spikeslab_coef)
+export(set_spikeslab_cov)
+export(set_ssvs)
 export(set_weight_bvhar)
 export(sim_iw)
 export(sim_matgaussian)
