writing ssvs mcmc code without implementing branch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,6 +120,7 @@ export(is.bvharmn)
 export(is.bvharspec)
 export(is.bvharss_coef)
 export(is.bvharss_sig)
+export(is.bvharss_spec)
 export(is.predbvhar)
 export(is.stable)
 export(is.varlse)
@@ -209,5 +210,6 @@ importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
+importFrom(utils,head)
 importFrom(utils,str)
 useDynLib(bvhar, .registration = TRUE)
