add relative loss function for ghosh et al

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,11 +72,15 @@ S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
 S3method(print,varlse)
 S3method(print,vharlse)
+S3method(relmae,bvharcv)
+S3method(relmae,predbvhar)
 S3method(residuals,bvarflat)
 S3method(residuals,bvarmn)
 S3method(residuals,bvharmn)
 S3method(residuals,varlse)
 S3method(residuals,vharlse)
+S3method(rmsfe,bvharcv)
+S3method(rmsfe,predbvhar)
 S3method(split_coef,bvharmod)
 S3method(stableroot,bvarflat)
 S3method(stableroot,bvarmn)
@@ -137,6 +141,8 @@ export(mape)
 export(mase)
 export(mrae)
 export(mse)
+export(relmae)
+export(rmsfe)
 export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
