--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,8 @@ S3method(residuals,bvarmn)
 S3method(residuals,bvharmn)
 S3method(residuals,varlse)
 S3method(residuals,vharlse)
+S3method(rmafe,bvharcv)
+S3method(rmafe,predbvhar)
 S3method(rmsfe,bvharcv)
 S3method(rmsfe,predbvhar)
 S3method(split_coef,bvharmod)
@@ -142,6 +144,7 @@ export(mase)
 export(mrae)
 export(mse)
 export(relmae)
+export(rmafe)
 export(rmsfe)
 export(set_bvar)
 export(set_bvar_flat)
