used parallel optim

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -195,6 +195,7 @@ importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
 importFrom(lifecycle,is_present)
 importFrom(magrittr,"%>%")
+importFrom(optimParallel,optimParallel)
 importFrom(purrr,reduce)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
