--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     foreach,
     purrr,
     utils,
-    stats
+    stats,
+    optimParallel
 LinkingTo: Rcpp, RcppEigen
 VignetteBuilder: knitr
 Depends: 
