--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,7 @@ Authors@R:
              comment = c(ORCID = "0000-0001-8651-1167")),
       person(given = "Changryong",
              family = "Baek",
-             role = "ctb",
-             comment = c(ORCID = "0000-0002-1839-404X")))
+             role = "ctb"))
 Description: A package aiming at researching Bayesian Vector heterogeneous autoregressive process.
     `bvhar` can model VAR, VHAR, Bayesian VAR (BVAR), and Bayesian VHAR (BVHAR).
 License: MIT + file LICENSE
@@ -25,7 +24,7 @@ Suggests:
     testthat (>= 3.0.0)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Imports: 
     lifecycle,
     magrittr,
