add integrated empirical bayes function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ S3method(predict,bvarmn)
 S3method(predict,bvharmn)
 S3method(predict,varlse)
 S3method(predict,vharlse)
+S3method(print,boundbvharemp)
 S3method(print,bvarflat)
 S3method(print,bvarmn)
 S3method(print,bvharcv)
@@ -100,9 +101,11 @@ export(VARtoVMA)
 export(VHARtoVMA)
 export(autolayer)
 export(autoplot)
+export(bound_bvhar)
 export(bvar_flat)
 export(bvar_minnesota)
 export(bvhar_minnesota)
+export(choose_bayes)
 export(choose_bvar)
 export(choose_bvhar)
 export(choose_var)
@@ -116,15 +119,18 @@ export(forecast_expand)
 export(forecast_roll)
 export(geom_eval)
 export(gg_loss)
+export(is.boundbvharemp)
 export(is.bvarflat)
 export(is.bvarmn)
 export(is.bvharcv)
+export(is.bvharemp)
 export(is.bvharmn)
 export(is.bvharspec)
 export(is.predbvhar)
 export(is.stable)
 export(is.varlse)
 export(is.vharlse)
+export(knit_print.boundbvharemp)
 export(knit_print.bvarflat)
 export(knit_print.bvarmn)
 export(knit_print.bvharcv)
