--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -74,11 +74,14 @@ reference:
   - rmafe
 
 - title: Empirical Bayes
-  desc: ~
+  desc: >
+    Hyperparameter selection.
   contents:
   - compute_logml
   - choose_bvar
   - choose_bvhar
+  - bound_bvhar
+  - choose_bayes
 
 - title: Information criteria
   desc: ~
