compute rmape and rmase with function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,10 @@ S3method(residuals,varlse)
 S3method(residuals,vharlse)
 S3method(rmafe,bvharcv)
 S3method(rmafe,predbvhar)
+S3method(rmape,bvharcv)
+S3method(rmape,predbvhar)
+S3method(rmase,bvharcv)
+S3method(rmase,predbvhar)
 S3method(rmsfe,bvharcv)
 S3method(rmsfe,predbvhar)
 S3method(split_coef,bvharmod)
@@ -150,6 +154,8 @@ export(mrae)
 export(mse)
 export(relmae)
 export(rmafe)
+export(rmape)
+export(rmase)
 export(rmsfe)
 export(set_bvar)
 export(set_bvar_flat)
