return orthogonal var orthogonal irf to autoplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,6 +123,8 @@ export(forecast_expand)
 export(forecast_roll)
 export(geom_eval)
 export(gg_loss)
+export(ir_var)
+export(ir_vhar)
 export(is.boundbvharemp)
 export(is.bvarflat)
 export(is.bvarmn)
