--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -50,12 +50,14 @@ reference:
   contents:
   - bvhar_minnesota
 
-- title: Inference
+- title: Structural Analysis
   desc: ~
   contents:
   - compute_cov
   - compute_covmse
   - compute_covmse_har
+  - ir_var
+  - ir_vhar
 
 - title: Forecasting
   desc: ~
