add var and vhar irf computation feature

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -208,6 +208,7 @@ importFrom(ggplot2,last_plot)
 importFrom(ggplot2,layer)
 importFrom(ggplot2,scale_colour_viridis_d)
 importFrom(ggplot2,scale_fill_viridis_d)
+importFrom(ggplot2,scale_x_continuous)
 importFrom(lifecycle,deprecate_soft)
 importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
