--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,16 @@
 template:
-  params:
-    bootswatch: journal
+  bootstrap: 5
+  bootswatch: journal
+  bslib:
+    bg: "#272935"
+    fg: "#f8f8f2"
+    primary: "#ff3860"
+    secondary: "#23252f"
+    base_font: {google: "Noto Serif"}
+    code_font: {google: "Noto Sans"}
+    code-bg: "#44475a"
+    code-color: "#f8f8f2"
+  theme: github-dark
 
 development:
   mode: auto
@@ -134,3 +144,15 @@ reference:
   - fitted.varlse
   - is.varlse
   - split_coef
+
+destination: '../../GitHub/young-blogdown/static/package/bvhar'
+
+navbar:
+  structure:
+    right: [github, goback]
+  components:
+    goback:
+      icon: fa-home
+      href: /software/
+      aria-label: Back to the page
+      text: Go back to the Software page
