--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -6,8 +6,8 @@ template:
     fg: "#f8f8f2"
     primary: "#ff3860"
     secondary: "#23252f"
-    base_font: {google: "Noto Serif"}
-    code_font: {google: "Noto Sans"}
+    base_font: {google: "Noto Sans"}
+    code_font: {google: "Anonymous Pro"}
     code-bg: "#44475a"
     code-color: "#f8f8f2"
   theme: github-dark
