--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,6 +180,7 @@ export(var_lm)
 export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
@@ -221,11 +222,14 @@ importFrom(stats,cor)
 importFrom(stats,logLik)
 importFrom(stats,nobs)
 importFrom(stats,optim)
+importFrom(stats,pt)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(stats,setNames)
+importFrom(tibble,add_column)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
+importFrom(tidyr,separate)
 importFrom(utils,str)
 useDynLib(bvhar, .registration = TRUE)
