modifying old ssvs r functions for new rcppeigen funtion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,7 @@ export(autoplot)
 export(bound_bvhar)
 export(bvar_flat)
 export(bvar_minnesota)
+export(bvar_ssvs)
 export(bvhar_minnesota)
 export(choose_bayes)
 export(choose_bvar)
@@ -165,6 +166,9 @@ export(rmsfe)
 export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
+export(set_spikeslab_chol)
+export(set_spikeslab_coef)
+export(set_ssvs)
 export(set_weight_bvhar)
 export(sim_iw)
 export(sim_matgaussian)
