draft of ssvs bvar function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,7 +128,9 @@ export(forecast_expand)
 export(forecast_roll)
 export(geom_eval)
 export(gg_loss)
+export(init_ssvs)
 export(is.boundbvharemp)
+export(is.bssvsinput)
 export(is.bvarflat)
 export(is.bvarmn)
 export(is.bvharcv)
@@ -136,6 +138,7 @@ export(is.bvharemp)
 export(is.bvharmn)
 export(is.bvharspec)
 export(is.predbvhar)
+export(is.ssvsinit)
 export(is.stable)
 export(is.varlse)
 export(is.vharlse)
@@ -166,8 +169,6 @@ export(rmsfe)
 export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
-export(set_spikeslab_chol)
-export(set_spikeslab_coef)
 export(set_ssvs)
 export(set_weight_bvhar)
 export(sim_iw)
