--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,7 +130,6 @@ export(geom_eval)
 export(gg_loss)
 export(init_ssvs)
 export(is.boundbvharemp)
-export(is.bssvsinput)
 export(is.bvarflat)
 export(is.bvarmn)
 export(is.bvharcv)
@@ -139,6 +138,7 @@ export(is.bvharmn)
 export(is.bvharspec)
 export(is.predbvhar)
 export(is.ssvsinit)
+export(is.ssvsinput)
 export(is.stable)
 export(is.varlse)
 export(is.vharlse)
@@ -176,8 +176,8 @@ export(sim_matgaussian)
 export(sim_mgaussian)
 export(sim_mncoef)
 export(sim_mniw)
+export(sim_mnormal)
 export(sim_mnvhar_coef)
-export(sim_var)
 export(sim_vhar)
 export(split_coef)
 export(stableroot)
