--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,8 @@ S3method(print,bvharirf)
 S3method(print,bvharmn)
 S3method(print,bvharspec)
 S3method(print,predbvhar)
+S3method(print,ssvsinit)
+S3method(print,ssvsinput)
 S3method(print,summary.normaliw)
 S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
@@ -151,6 +153,8 @@ export(knit_print.bvharirf)
 export(knit_print.bvharmn)
 export(knit_print.bvharspec)
 export(knit_print.predbvhar)
+export(knit_print.ssvsinit)
+export(knit_print.ssvsinput)
 export(knit_print.summary.normaliw)
 export(knit_print.summary.varlse)
 export(knit_print.summary.vharlse)
