tries for bvar ssvs to support posterior package

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,9 @@ Imports:
     purrr,
     utils,
     stats,
-    optimParallel
+    optimParallel,
+    posterior,
+    bayesplot
 LinkingTo: Rcpp, RcppEigen
 VignetteBuilder: knitr
 Depends: 
