--- a/NAMESPACE
+++ b/NAMESPACE
@@ -224,6 +224,8 @@ importFrom(lifecycle,deprecated)
 importFrom(lifecycle,is_present)
 importFrom(magrittr,"%>%")
 importFrom(optimParallel,optimParallel)
+importFrom(posterior,as_draws_df)
+importFrom(posterior,bind_draws)
 importFrom(purrr,reduce)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
