--- a/NAMESPACE
+++ b/NAMESPACE
@@ -182,6 +182,7 @@ export(sim_mncoef)
 export(sim_mniw)
 export(sim_mnormal)
 export(sim_mnvhar_coef)
+export(sim_var)
 export(sim_vhar)
 export(split_coef)
 export(stableroot)
