fix result variable names and iteration name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ S3method(predict,vharlse)
 S3method(print,boundbvharemp)
 S3method(print,bvarflat)
 S3method(print,bvarmn)
+S3method(print,bvarsp)
 S3method(print,bvharcv)
 S3method(print,bvharemp)
 S3method(print,bvharirf)
@@ -147,6 +148,7 @@ export(is.vharlse)
 export(knit_print.boundbvharemp)
 export(knit_print.bvarflat)
 export(knit_print.bvarmn)
+export(knit_print.bvarsp)
 export(knit_print.bvharcv)
 export(knit_print.bvharemp)
 export(knit_print.bvharirf)
