--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ BugReports: https://github.com/ygeunkim/bvhar/issues
 Suggests: 
     bayesplot,
     covr,
+    doMC,
     knitr,
     parallel,
     rmarkdown,
