make function vhar simulation from cholesky

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ S3method(print,bvharcv)
 S3method(print,bvharemp)
 S3method(print,bvharirf)
 S3method(print,bvharmn)
+S3method(print,bvharsp)
 S3method(print,bvharspec)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
@@ -119,6 +120,7 @@ export(bvar_flat)
 export(bvar_minnesota)
 export(bvar_ssvs)
 export(bvhar_minnesota)
+export(bvhar_ssvs)
 export(choose_bayes)
 export(choose_bvar)
 export(choose_bvhar)
@@ -153,6 +155,7 @@ export(knit_print.bvharcv)
 export(knit_print.bvharemp)
 export(knit_print.bvharirf)
 export(knit_print.bvharmn)
+export(knit_print.bvharsp)
 export(knit_print.bvharspec)
 export(knit_print.predbvhar)
 export(knit_print.ssvsinit)
