--- a/NAMESPACE
+++ b/NAMESPACE
@@ -178,6 +178,7 @@ export(rmsfe)
 export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
+export(set_lambda)
 export(set_ssvs)
 export(set_weight_bvhar)
 export(sim_iw)
