make print bvharspec method compatible with set lambda psi functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ S3method(print,bvharcv)
 S3method(print,bvharemp)
 S3method(print,bvharirf)
 S3method(print,bvharmn)
+S3method(print,bvharpriorspec)
 S3method(print,bvharsp)
 S3method(print,bvharspec)
 S3method(print,predbvhar)
@@ -140,6 +141,7 @@ export(is.bvarmn)
 export(is.bvharcv)
 export(is.bvharemp)
 export(is.bvharmn)
+export(is.bvharpriorspec)
 export(is.bvharspec)
 export(is.predbvhar)
 export(is.ssvsinit)
@@ -155,6 +157,7 @@ export(knit_print.bvharcv)
 export(knit_print.bvharemp)
 export(knit_print.bvharirf)
 export(knit_print.bvharmn)
+export(knit_print.bvharpriorspec)
 export(knit_print.bvharsp)
 export(knit_print.bvharspec)
 export(knit_print.predbvhar)
@@ -179,6 +182,7 @@ export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
 export(set_lambda)
+export(set_psi)
 export(set_ssvs)
 export(set_weight_bvhar)
 export(sim_iw)
