initialize hyperparams at posterior modes using optim

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ export(autoplot)
 export(bound_bvhar)
 export(bvar_flat)
 export(bvar_minnesota)
+export(bvar_niwhm)
 export(bvar_ssvs)
 export(bvhar_minnesota)
 export(bvhar_ssvs)
