--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ S3method(predict,varlse)
 S3method(predict,vharlse)
 S3method(print,boundbvharemp)
 S3method(print,bvarflat)
+S3method(print,bvarhm)
 S3method(print,bvarmn)
 S3method(print,bvarsp)
 S3method(print,bvharcv)
@@ -152,6 +153,7 @@ export(is.varlse)
 export(is.vharlse)
 export(knit_print.boundbvharemp)
 export(knit_print.bvarflat)
+export(knit_print.bvarhm)
 export(knit_print.bvarmn)
 export(knit_print.bvarsp)
 export(knit_print.bvharcv)
