--- a/NAMESPACE
+++ b/NAMESPACE
@@ -201,6 +201,7 @@ export(split_coef)
 export(stableroot)
 export(var_lm)
 export(vhar_lm)
+import(RcppEigen)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
