--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,9 +42,7 @@ Imports:
     utils,
     stats,
     optimParallel,
-    posterior,
-    RcppEigen,
-    RcppProgress
+    posterior
 LinkingTo: 
     Rcpp,
     RcppEigen,
