reflect matrix normal to r object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -119,6 +119,7 @@ export(autolayer)
 export(autoplot)
 export(bound_bvhar)
 export(bvar_flat)
+export(bvar_horseshoe)
 export(bvar_minnesota)
 export(bvar_niwhm)
 export(bvar_ssvs)
@@ -136,6 +137,7 @@ export(forecast_expand)
 export(forecast_roll)
 export(geom_eval)
 export(gg_loss)
+export(init_horseshoe)
 export(init_ssvs)
 export(is.boundbvharemp)
 export(is.bvarflat)
@@ -145,6 +147,7 @@ export(is.bvharemp)
 export(is.bvharmn)
 export(is.bvharpriorspec)
 export(is.bvharspec)
+export(is.horseshoeinit)
 export(is.predbvhar)
 export(is.ssvsinit)
 export(is.ssvsinput)
