fix seq_len error in r function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ S3method(predict,vharlse)
 S3method(print,boundbvharemp)
 S3method(print,bvarflat)
 S3method(print,bvarhm)
+S3method(print,bvarhs)
 S3method(print,bvarmn)
 S3method(print,bvarsp)
 S3method(print,bvharcv)
@@ -157,6 +158,7 @@ export(is.vharlse)
 export(knit_print.boundbvharemp)
 export(knit_print.bvarflat)
 export(knit_print.bvarhm)
+export(knit_print.bvarhs)
 export(knit_print.bvarmn)
 export(knit_print.bvarsp)
 export(knit_print.bvharcv)
