stabilize the horseshoe results

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ S3method(print,bvharmn)
 S3method(print,bvharpriorspec)
 S3method(print,bvharsp)
 S3method(print,bvharspec)
+S3method(print,horseshoeinit)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
@@ -168,6 +169,7 @@ export(knit_print.bvharmn)
 export(knit_print.bvharpriorspec)
 export(knit_print.bvharsp)
 export(knit_print.bvharspec)
+export(knit_print.horseshoeinit)
 export(knit_print.predbvhar)
 export(knit_print.ssvsinit)
 export(knit_print.ssvsinput)
