change the name of horseshoe init spec function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -139,7 +139,6 @@ export(forecast_expand)
 export(forecast_roll)
 export(geom_eval)
 export(gg_loss)
-export(init_horseshoe)
 export(init_ssvs)
 export(is.boundbvharemp)
 export(is.bvarflat)
@@ -191,6 +190,7 @@ export(rmsfe)
 export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
+export(set_horseshoe)
 export(set_lambda)
 export(set_psi)
 export(set_ssvs)
