import dorng to use parallel mcmc in r

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,7 +42,8 @@ Imports:
     utils,
     stats,
     optimParallel,
-    posterior
+    posterior,
+    doRNG
 LinkingTo: 
     Rcpp,
     RcppEigen,
