fix error by including mean in sim vhar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,14 +68,14 @@ S3method(print,bvarflat)
 S3method(print,bvarhm)
 S3method(print,bvarhs)
 S3method(print,bvarmn)
-S3method(print,bvarsp)
+S3method(print,bvarssvs)
 S3method(print,bvharcv)
 S3method(print,bvharemp)
 S3method(print,bvharirf)
 S3method(print,bvharmn)
 S3method(print,bvharpriorspec)
-S3method(print,bvharsp)
 S3method(print,bvharspec)
+S3method(print,bvharssvs)
 S3method(print,horseshoeinit)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
@@ -160,14 +160,14 @@ export(knit_print.bvarflat)
 export(knit_print.bvarhm)
 export(knit_print.bvarhs)
 export(knit_print.bvarmn)
-export(knit_print.bvarsp)
+export(knit_print.bvarssvs)
 export(knit_print.bvharcv)
 export(knit_print.bvharemp)
 export(knit_print.bvharirf)
 export(knit_print.bvharmn)
 export(knit_print.bvharpriorspec)
-export(knit_print.bvharsp)
 export(knit_print.bvharspec)
+export(knit_print.bvharssvs)
 export(knit_print.horseshoeinit)
 export(knit_print.predbvhar)
 export(knit_print.ssvsinit)
