--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,12 +71,13 @@ S3method(print,bvarmn)
 S3method(print,bvarssvs)
 S3method(print,bvharcv)
 S3method(print,bvharemp)
+S3method(print,bvharhs)
 S3method(print,bvharirf)
 S3method(print,bvharmn)
 S3method(print,bvharpriorspec)
 S3method(print,bvharspec)
 S3method(print,bvharssvs)
-S3method(print,horseshoeinit)
+S3method(print,horseshoespec)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
@@ -125,6 +126,7 @@ export(bvar_horseshoe)
 export(bvar_minnesota)
 export(bvar_niwhm)
 export(bvar_ssvs)
+export(bvhar_horseshoe)
 export(bvhar_minnesota)
 export(bvhar_ssvs)
 export(choose_bayes)
@@ -148,7 +150,7 @@ export(is.bvharemp)
 export(is.bvharmn)
 export(is.bvharpriorspec)
 export(is.bvharspec)
-export(is.horseshoeinit)
+export(is.horseshoespec)
 export(is.predbvhar)
 export(is.ssvsinit)
 export(is.ssvsinput)
@@ -163,12 +165,13 @@ export(knit_print.bvarmn)
 export(knit_print.bvarssvs)
 export(knit_print.bvharcv)
 export(knit_print.bvharemp)
+export(knit_print.bvharhs)
 export(knit_print.bvharirf)
 export(knit_print.bvharmn)
 export(knit_print.bvharpriorspec)
 export(knit_print.bvharspec)
 export(knit_print.bvharssvs)
-export(knit_print.horseshoeinit)
+export(knit_print.horseshoespec)
 export(knit_print.predbvhar)
 export(knit_print.ssvsinit)
 export(knit_print.ssvsinput)
