add error and plot methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,12 +22,14 @@ S3method(analyze_ir,varlse)
 S3method(analyze_ir,vharlse)
 S3method(autolayer,predbvhar)
 S3method(autoplot,bvharirf)
+S3method(autoplot,bvharsp)
 S3method(autoplot,normaliw)
 S3method(autoplot,predbvhar)
 S3method(autoplot,summary.normaliw)
 S3method(coef,bvarflat)
 S3method(coef,bvarmn)
 S3method(coef,bvharmn)
+S3method(coef,bvharsp)
 S3method(coef,varlse)
 S3method(coef,vharlse)
 S3method(compute_dic,bvarmn)
@@ -88,6 +90,7 @@ S3method(print,varlse)
 S3method(print,vharlse)
 S3method(relmae,bvharcv)
 S3method(relmae,predbvhar)
+S3method(relspne,bvharsp)
 S3method(residuals,bvarflat)
 S3method(residuals,bvarmn)
 S3method(residuals,bvharmn)
@@ -103,6 +106,7 @@ S3method(rmsfe,bvharcv)
 S3method(rmsfe,predbvhar)
 S3method(split_coef,bvharirf)
 S3method(split_coef,bvharmod)
+S3method(spne,bvharsp)
 S3method(stableroot,bvarflat)
 S3method(stableroot,bvarmn)
 S3method(stableroot,bvharmn)
@@ -186,6 +190,7 @@ export(mase)
 export(mrae)
 export(mse)
 export(relmae)
+export(relspne)
 export(rmafe)
 export(rmape)
 export(rmase)
@@ -208,10 +213,14 @@ export(sim_mnvhar_coef)
 export(sim_var)
 export(sim_vhar)
 export(split_coef)
+export(spne)
 export(stableroot)
 export(var_lm)
 export(vhar_lm)
 importFrom(Rcpp,sourceCpp)
+importFrom(bayesplot,mcmc_areas)
+importFrom(bayesplot,mcmc_dens)
+importFrom(bayesplot,mcmc_trace)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
