--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,6 @@ License: MIT + file LICENSE
 URL: https://github.com/ygeunkim/bvhar
 BugReports: https://github.com/ygeunkim/bvhar/issues
 Suggests: 
-    bayesplot,
     covr,
     doMC,
     knitr,
@@ -42,7 +41,8 @@ Imports:
     utils,
     stats,
     optimParallel,
-    posterior
+    posterior,
+    bayesplot
 LinkingTo: 
     Rcpp,
     RcppEigen,
