use dorng instead of openmp for parallel mcmc

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,7 +42,8 @@ Imports:
     stats,
     optimParallel,
     posterior,
-    bayesplot
+    bayesplot,
+    doRNG
 LinkingTo: 
     Rcpp,
     RcppEigen,
