--- a/NAMESPACE
+++ b/NAMESPACE
@@ -221,6 +221,7 @@ importFrom(Rcpp,evalCpp)
 importFrom(bayesplot,mcmc_areas)
 importFrom(bayesplot,mcmc_dens)
 importFrom(bayesplot,mcmc_trace)
+importFrom(doRNG,"%dorng%")
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
@@ -231,6 +232,7 @@ importFrom(dplyr,n)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(foreach,getDoParRegistered)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,autolayer)
 importFrom(ggplot2,autoplot)
