add precision and recall functions for sparsity evaluation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,17 +29,28 @@ S3method(autoplot,summary.normaliw)
 S3method(coef,bvarflat)
 S3method(coef,bvarmn)
 S3method(coef,bvharmn)
-S3method(coef,bvharsp)
+S3method(coef,mvhsmod)
+S3method(coef,ssvsmod)
 S3method(coef,varlse)
 S3method(coef,vharlse)
 S3method(compute_dic,bvarmn)
 S3method(compute_logml,bvarmn)
 S3method(compute_logml,bvharmn)
+S3method(conf_fscore,mvhsmod)
+S3method(conf_fscore,ssvsmod)
+S3method(conf_prec,mvhsmod)
+S3method(conf_prec,ssvsmod)
+S3method(conf_recall,mvhsmod)
+S3method(conf_recall,ssvsmod)
+S3method(confusion,mvhsmod)
+S3method(confusion,ssvsmod)
 S3method(fitted,bvarflat)
 S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
+S3method(fromse,mvhsmod)
+S3method(fromse,ssvsmod)
 S3method(is.stable,bvarflat)
 S3method(is.stable,bvarmn)
 S3method(is.stable,bvharmn)
@@ -90,7 +101,8 @@ S3method(print,varlse)
 S3method(print,vharlse)
 S3method(relmae,bvharcv)
 S3method(relmae,predbvhar)
-S3method(relspne,bvharsp)
+S3method(relspne,mvhsmod)
+S3method(relspne,ssvsmod)
 S3method(residuals,bvarflat)
 S3method(residuals,bvarmn)
 S3method(residuals,bvharmn)
@@ -106,7 +118,8 @@ S3method(rmsfe,bvharcv)
 S3method(rmsfe,predbvhar)
 S3method(split_coef,bvharirf)
 S3method(split_coef,bvharmod)
-S3method(spne,bvharsp)
+S3method(spne,mvhsmod)
+S3method(spne,ssvsmod)
 S3method(stableroot,bvarflat)
 S3method(stableroot,bvarmn)
 S3method(stableroot,bvharmn)
@@ -140,9 +153,14 @@ export(choose_var)
 export(compute_cov)
 export(compute_dic)
 export(compute_logml)
+export(conf_fscore)
+export(conf_prec)
+export(conf_recall)
+export(confusion)
 export(divide_ts)
 export(forecast_expand)
 export(forecast_roll)
+export(fromse)
 export(geom_eval)
 export(gg_loss)
 export(init_ssvs)
