can variable selection using summary method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,14 +36,10 @@ S3method(coef,vharlse)
 S3method(compute_dic,bvarmn)
 S3method(compute_logml,bvarmn)
 S3method(compute_logml,bvharmn)
-S3method(conf_fscore,mvhsmod)
-S3method(conf_fscore,ssvsmod)
-S3method(conf_prec,mvhsmod)
-S3method(conf_prec,ssvsmod)
-S3method(conf_recall,mvhsmod)
-S3method(conf_recall,ssvsmod)
-S3method(confusion,mvhsmod)
-S3method(confusion,ssvsmod)
+S3method(conf_fscore,summary.bvharsp)
+S3method(conf_prec,summary.bvharsp)
+S3method(conf_recall,summary.bvharsp)
+S3method(confusion,summary.bvharsp)
 S3method(fitted,bvarflat)
 S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
@@ -125,7 +121,9 @@ S3method(stableroot,bvarmn)
 S3method(stableroot,bvharmn)
 S3method(stableroot,varlse)
 S3method(stableroot,vharlse)
+S3method(summary,mvhsmod)
 S3method(summary,normaliw)
+S3method(summary,ssvsmod)
 S3method(summary,varlse)
 S3method(summary,vharlse)
 export("%>%")
@@ -247,6 +245,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,rename)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
@@ -279,9 +278,12 @@ importFrom(magrittr,"%>%")
 importFrom(optimParallel,optimParallel)
 importFrom(posterior,as_draws_df)
 importFrom(posterior,bind_draws)
+importFrom(posterior,subset_draws)
+importFrom(posterior,summarise_draws)
 importFrom(purrr,reduce)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
+importFrom(stats,coef)
 importFrom(stats,cor)
 importFrom(stats,logLik)
 importFrom(stats,nobs)
