add fdr fnr and use factor when computing confusion matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,8 @@ S3method(coef,vharlse)
 S3method(compute_dic,bvarmn)
 S3method(compute_logml,bvarmn)
 S3method(compute_logml,bvharmn)
+S3method(conf_fdr,summary.bvharsp)
+S3method(conf_fnr,summary.bvharsp)
 S3method(conf_fscore,summary.bvharsp)
 S3method(conf_prec,summary.bvharsp)
 S3method(conf_recall,summary.bvharsp)
@@ -151,6 +153,8 @@ export(choose_var)
 export(compute_cov)
 export(compute_dic)
 export(compute_logml)
+export(conf_fdr)
+export(conf_fnr)
 export(conf_fscore)
 export(conf_prec)
 export(conf_recall)
