remove removal step in ssvs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,8 +29,7 @@ S3method(autoplot,summary.normaliw)
 S3method(coef,bvarflat)
 S3method(coef,bvarmn)
 S3method(coef,bvharmn)
-S3method(coef,mvhsmod)
-S3method(coef,ssvsmod)
+S3method(coef,bvharsp)
 S3method(coef,varlse)
 S3method(coef,vharlse)
 S3method(compute_dic,bvarmn)
@@ -47,8 +46,7 @@ S3method(fitted,bvarmn)
 S3method(fitted,bvharmn)
 S3method(fitted,varlse)
 S3method(fitted,vharlse)
-S3method(fromse,mvhsmod)
-S3method(fromse,ssvsmod)
+S3method(fromse,bvharsp)
 S3method(is.stable,bvarflat)
 S3method(is.stable,bvarmn)
 S3method(is.stable,bvharmn)
@@ -99,8 +97,7 @@ S3method(print,varlse)
 S3method(print,vharlse)
 S3method(relmae,bvharcv)
 S3method(relmae,predbvhar)
-S3method(relspne,mvhsmod)
-S3method(relspne,ssvsmod)
+S3method(relspne,bvharsp)
 S3method(residuals,bvarflat)
 S3method(residuals,bvarmn)
 S3method(residuals,bvharmn)
@@ -116,8 +113,7 @@ S3method(rmsfe,bvharcv)
 S3method(rmsfe,predbvhar)
 S3method(split_coef,bvharirf)
 S3method(split_coef,bvharmod)
-S3method(spne,mvhsmod)
-S3method(spne,ssvsmod)
+S3method(spne,bvharsp)
 S3method(stableroot,bvarflat)
 S3method(stableroot,bvarmn)
 S3method(stableroot,bvharmn)
