--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ S3method(coef,bvarflat)
 S3method(coef,bvarmn)
 S3method(coef,bvharmn)
 S3method(coef,bvharsp)
+S3method(coef,summary.bvharsp)
 S3method(coef,varlse)
 S3method(coef,vharlse)
 S3method(compute_dic,bvarmn)
@@ -90,7 +91,9 @@ S3method(print,horseshoespec)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
+S3method(print,summary.mvhsmod)
 S3method(print,summary.normaliw)
+S3method(print,summary.ssvsmod)
 S3method(print,summary.varlse)
 S3method(print,summary.vharlse)
 S3method(print,varlse)
@@ -195,7 +198,9 @@ export(knit_print.horseshoespec)
 export(knit_print.predbvhar)
 export(knit_print.ssvsinit)
 export(knit_print.ssvsinput)
+export(knit_print.summary.mvhsmod)
 export(knit_print.summary.normaliw)
+export(knit_print.summary.ssvsmod)
 export(knit_print.summary.varlse)
 export(knit_print.summary.vharlse)
 export(knit_print.varlse)
