--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,7 +70,9 @@ S3method(mse,bvharcv)
 S3method(mse,predbvhar)
 S3method(predict,bvarflat)
 S3method(predict,bvarmn)
+S3method(predict,bvarssvs)
 S3method(predict,bvharmn)
+S3method(predict,bvharssvs)
 S3method(predict,varlse)
 S3method(predict,vharlse)
 S3method(print,boundbvharemp)
@@ -282,6 +284,7 @@ importFrom(lifecycle,is_present)
 importFrom(magrittr,"%>%")
 importFrom(optimParallel,optimParallel)
 importFrom(posterior,as_draws_df)
+importFrom(posterior,as_draws_matrix)
 importFrom(posterior,bind_draws)
 importFrom(posterior,subset_draws)
 importFrom(posterior,summarise_draws)
