add predict method for horseshoe

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,8 +69,10 @@ S3method(mrae,predbvhar)
 S3method(mse,bvharcv)
 S3method(mse,predbvhar)
 S3method(predict,bvarflat)
+S3method(predict,bvarhs)
 S3method(predict,bvarmn)
 S3method(predict,bvarssvs)
+S3method(predict,bvharhs)
 S3method(predict,bvharmn)
 S3method(predict,bvharssvs)
 S3method(predict,varlse)
