add default semiautomatic approach to choose ssvs hyperparameters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -152,6 +152,7 @@ export(bvhar_ssvs)
 export(choose_bayes)
 export(choose_bvar)
 export(choose_bvhar)
+export(choose_ssvs)
 export(choose_var)
 export(compute_cov)
 export(compute_dic)
