add ssvs and horseshoe parameters simulation functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -229,6 +229,8 @@ export(set_lambda)
 export(set_psi)
 export(set_ssvs)
 export(set_weight_bvhar)
+export(sim_hs_var)
+export(sim_hs_vhar)
 export(sim_iw)
 export(sim_matgaussian)
 export(sim_mgaussian)
@@ -236,6 +238,8 @@ export(sim_mncoef)
 export(sim_mniw)
 export(sim_mnormal)
 export(sim_mnvhar_coef)
+export(sim_ssvs_var)
+export(sim_ssvs_vhar)
 export(sim_var)
 export(sim_vhar)
 export(split_coef)
@@ -302,6 +306,9 @@ importFrom(stats,optim)
 importFrom(stats,pt)
 importFrom(stats,qnorm)
 importFrom(stats,quantile)
+importFrom(stats,rbinom)
+importFrom(stats,rgamma)
+importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(tibble,add_column)
