--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ S3method(autoplot,bvharirf)
 S3method(autoplot,bvharsp)
 S3method(autoplot,normaliw)
 S3method(autoplot,predbvhar)
+S3method(autoplot,summary.mvhsmod)
 S3method(autoplot,summary.normaliw)
 S3method(coef,bvarflat)
 S3method(coef,bvarmn)
@@ -275,6 +276,7 @@ importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_ribbon)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
