--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ S3method(autoplot,bvharirf)
 S3method(autoplot,bvharsp)
 S3method(autoplot,normaliw)
 S3method(autoplot,predbvhar)
+S3method(autoplot,summary.bvharsp)
 S3method(autoplot,summary.mvhsmod)
 S3method(autoplot,summary.normaliw)
 S3method(coef,bvarflat)
@@ -261,6 +262,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,rename)
+importFrom(forcats,fct_rev)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
@@ -277,6 +279,7 @@ importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_path)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
@@ -286,6 +289,7 @@ importFrom(ggplot2,layer)
 importFrom(ggplot2,scale_colour_viridis_d)
 importFrom(ggplot2,scale_fill_viridis_d)
 importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_x_discrete)
 importFrom(lifecycle,deprecate_soft)
 importFrom(lifecycle,deprecate_warn)
 importFrom(lifecycle,deprecated)
@@ -316,5 +320,6 @@ importFrom(tibble,add_column)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,separate)
+importFrom(tidyr,separate_wider_delim)
 importFrom(utils,str)
 useDynLib(bvhar, .registration = TRUE)
