use include mean in cpp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -171,6 +171,7 @@ export(sim_matgaussian)
 export(sim_mgaussian)
 export(sim_mncoef)
 export(sim_mniw)
+export(sim_mnormal)
 export(sim_mnvhar_coef)
 export(sim_var)
 export(sim_vhar)
@@ -178,6 +179,7 @@ export(split_coef)
 export(stableroot)
 export(var_lm)
 export(vhar_lm)
+importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
