add cholesky and qr option to var and vhar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,11 +65,13 @@ S3method(predict,varlse)
 S3method(predict,vharlse)
 S3method(print,boundbvharemp)
 S3method(print,bvarflat)
+S3method(print,bvarhm)
 S3method(print,bvarmn)
 S3method(print,bvharcv)
 S3method(print,bvharemp)
 S3method(print,bvharirf)
 S3method(print,bvharmn)
+S3method(print,bvharpriorspec)
 S3method(print,bvharspec)
 S3method(print,predbvhar)
 S3method(print,summary.normaliw)
@@ -114,6 +116,7 @@ export(autoplot)
 export(bound_bvhar)
 export(bvar_flat)
 export(bvar_minnesota)
+export(bvar_niwhm)
 export(bvhar_minnesota)
 export(choose_bayes)
 export(choose_bvar)
@@ -133,6 +136,7 @@ export(is.bvarmn)
 export(is.bvharcv)
 export(is.bvharemp)
 export(is.bvharmn)
+export(is.bvharpriorspec)
 export(is.bvharspec)
 export(is.predbvhar)
 export(is.stable)
@@ -140,11 +144,13 @@ export(is.varlse)
 export(is.vharlse)
 export(knit_print.boundbvharemp)
 export(knit_print.bvarflat)
+export(knit_print.bvarhm)
 export(knit_print.bvarmn)
 export(knit_print.bvharcv)
 export(knit_print.bvharemp)
 export(knit_print.bvharirf)
 export(knit_print.bvharmn)
+export(knit_print.bvharpriorspec)
 export(knit_print.bvharspec)
 export(knit_print.predbvhar)
 export(knit_print.summary.normaliw)
@@ -165,6 +171,8 @@ export(rmsfe)
 export(set_bvar)
 export(set_bvar_flat)
 export(set_bvhar)
+export(set_lambda)
+export(set_psi)
 export(set_weight_bvhar)
 export(sim_iw)
 export(sim_matgaussian)
@@ -217,6 +225,8 @@ importFrom(lifecycle,deprecated)
 importFrom(lifecycle,is_present)
 importFrom(magrittr,"%>%")
 importFrom(optimParallel,optimParallel)
+importFrom(posterior,as_draws_df)
+importFrom(posterior,bind_draws)
 importFrom(purrr,reduce)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
