--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,8 +39,12 @@ Imports:
     purrr,
     utils,
     stats,
-    optimParallel
-LinkingTo: Rcpp, RcppEigen
+    optimParallel,
+    posterior
+LinkingTo: 
+    Rcpp,
+    RcppEigen,
+    RcppProgress
 VignetteBuilder: knitr
 Depends: 
     R (>= 3.1.0)
