can generate var and vhar using MVT distribution

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -181,6 +181,7 @@ export(sim_mncoef)
 export(sim_mniw)
 export(sim_mnormal)
 export(sim_mnvhar_coef)
+export(sim_mvt)
 export(sim_var)
 export(sim_vhar)
 export(split_coef)
