--- a/NAMESPACE
+++ b/NAMESPACE
@@ -240,6 +240,7 @@ export(sim_mncoef)
 export(sim_mniw)
 export(sim_mnormal)
 export(sim_mnvhar_coef)
+export(sim_mvt)
 export(sim_ssvs_var)
 export(sim_ssvs_vhar)
 export(sim_var)
