change summary code for vectorization horseshoe

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,7 @@ S3method(autoplot,bvharsp)
 S3method(autoplot,normaliw)
 S3method(autoplot,predbvhar)
 S3method(autoplot,summary.bvharsp)
-S3method(autoplot,summary.mvhsmod)
+S3method(autoplot,summary.hsmod)
 S3method(autoplot,summary.normaliw)
 S3method(coef,bvarflat)
 S3method(coef,bvarmn)
@@ -97,7 +97,7 @@ S3method(print,horseshoespec)
 S3method(print,predbvhar)
 S3method(print,ssvsinit)
 S3method(print,ssvsinput)
-S3method(print,summary.mvhsmod)
+S3method(print,summary.hsmod)
 S3method(print,summary.normaliw)
 S3method(print,summary.ssvsmod)
 S3method(print,summary.varlse)
@@ -128,7 +128,7 @@ S3method(stableroot,bvarmn)
 S3method(stableroot,bvharmn)
 S3method(stableroot,varlse)
 S3method(stableroot,vharlse)
-S3method(summary,mvhsmod)
+S3method(summary,hsmod)
 S3method(summary,normaliw)
 S3method(summary,ssvsmod)
 S3method(summary,varlse)
@@ -205,7 +205,7 @@ export(knit_print.horseshoespec)
 export(knit_print.predbvhar)
 export(knit_print.ssvsinit)
 export(knit_print.ssvsinput)
-export(knit_print.summary.mvhsmod)
+export(knit_print.summary.hsmod)
 export(knit_print.summary.normaliw)
 export(knit_print.summary.ssvsmod)
 export(knit_print.summary.varlse)
