adding column wise shrinkage matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -306,6 +306,7 @@ importFrom(purrr,reduce)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(stats,cor)
+importFrom(stats,cov)
 importFrom(stats,logLik)
 importFrom(stats,nobs)
 importFrom(stats,optim)
